--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -28,7 +28,7 @@ html {
 
 body {
     display: grid;
-    grid-template-rows: auto 1fr auto; /* Trois lignes : une pour l'en-tête, une pour le contenu, une pour le footer */
+    grid-template-rows: 5fr 80fr 10fr;
 
     min-height: 100vh; /* Pour que le contenu s'étende sur toute la hauteur de la fenêtre */
     margin: 0;
@@ -42,8 +42,9 @@ header {
 
     display: grid;
 
-    height: 130px;
+
 }
+
 
 #subPage {
     grid-row: 2;
@@ -78,7 +79,6 @@ header > #iconsAndPageTitle {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 
-    max-height: 10%;
     min-height: 0;
     min-width: 0;
 }
@@ -89,10 +89,13 @@ header > #iconsAndPageTitle > a {
     max-height: 100%;
     overflow: hidden;
     min-width: 0;
+
+    max-width: 100px;
 }
 
 header > #iconsAndPageTitle > a > img {
-    height: 100%;
+    width: 100%;
+    height: auto;
 }
 
 header > #iconsAndPageTitle > h1 {
@@ -102,15 +105,25 @@ header > #iconsAndPageTitle > h1 {
     max-height: 100%;
 }
 
+header > #iconsAndPageTitle > img {
+    grid-column: 3;
+    max-height: 100%;
+    overflow: hidden;
+    min-width: 0;
 
-nav {
+    max-width: 100px;
+    height: auto;
+}
+
+
+header > nav {
     grid-row: 2;
 
     background: var(--param-footer_bg_clr);
     border: 1px solid #ccc;
 }
 
-nav ul {
+header > nav > ul {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 
@@ -119,12 +132,12 @@ nav ul {
     list-style: none;
 }
 
-nav ul li {
+header > nav > ul > li {
     text-align: center;
     border: 1px solid #ccc;
 }
 
-nav ul li a {
+header > nav > ul > li > a {
     display: block;
     text-decoration: none;
     color: var(--param-special_txt_clr);
@@ -136,3 +149,43 @@ nav ul li a {
     cursor: pointer;
 }
 
+
+
+ /* Dropdown Button */
+#language_icon {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+#language_icon:hover, #language_icon:focus {
+  background-color: #2980B9;
+}
+
+/* Dropdown Content (Hidden by Default) */
+#language_dropdown {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+#language_dropdown a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+#language_dropdown a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu (use JS to add this class to the #language_dropdown container when the user clicks on the dropdown button) */
+.show {display:block;}
