--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -28,7 +28,8 @@ html {
 
 body {
     display: grid;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: 140px auto 140px;
+    grid-row-gap: 30px;
 
     min-height: 100vh; /* Pour que le contenu s'étende sur toute la hauteur de la fenêtre */
     margin: 0;
@@ -61,7 +62,7 @@ footer {
 
     background-color: var(--param-footer_bg_clr);
     text-align: center;
-    padding: 10px 0;
+    padding: 10px 0 0 0;
 }
 
 /* ----------------------------- */
@@ -124,30 +125,33 @@ header > nav {
     background: var(--param-footer_bg_clr);
     border: 1px solid #ccc;
 
-    height: 30%;
+    height: 40px;
 }
 
-header > nav > ul {
+header > nav > #sectionsMenu {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 
     padding: 0;
     margin: 0;
-    list-style: none;
 
     height: 100%;
 }
 
-header > nav > ul > li {
+header > nav > #sectionsMenu > .sectionsMenuItem {
     text-align: center;
     border: 1px solid #ccc;
+
+    min-height: 100%;
 }
 
-header > nav > ul > li > a {
+header > nav > #sectionsMenu > .sectionsMenuItem > a {
     display: block;
     text-decoration: none;
     color: var(--param-special_txt_clr);
-    padding: 10px 0;
+    padding: 10px 0 0 0;
+
+    max-height: 100%;
 }
 
 
