--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -41,7 +41,8 @@ body {
 header {
     grid-row: 1;
 
-    display: grid;
+    display: flex;
+    flex-direction: column;
 }
 
 #subPage {
@@ -63,17 +64,20 @@ footer {
     background-color: var(--param-footer_bg_clr);
     text-align: center;
     padding: 10px 0 0 0;
+    min-height: 210px;
 }
 
 /* ----------------------------- */
+
+br {
+    margin-bottom: 15px;
+}
 
 h1, h2, h3, p {
     color: var(--param-txt_clr);
 }
 
 header > #iconsAndPageTitle {
-    grid-row: 1;
-
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 
@@ -120,8 +124,6 @@ header > #iconsAndPageTitle > div > img {
 }
 
 header > nav {
-    grid-row: 2;
-
     background: var(--param-footer_bg_clr);
     border: 1px solid #ccc;
 
